css spacing, fix nvd3 bower paths

--- a/client/app/styles/buildingDisplay.scss
+++ b/client/app/styles/buildingDisplay.scss
@@ -32,10 +32,6 @@
   margin-left: 2%;
 }
 
-#building-display-panel{
-  margin-top: 30px;
-}
-
 #detailed-toggle {
   margin-top: 20px;
 }
